--- a/index.html
+++ b/index.html
@@ -3,93 +3,34 @@
     <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@450;700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&display=swap&text=nowhereinparticular" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&display=swap&text=underconstruction" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet" type="text/css" media="all">
-        <link rel="icon" type="image/x-icon" href="images/icon.jpg">
-        <title>nowhere in particular</title><style>
-            body{--back: #faf9ff;
-                --text: #001a43;
-                --color: #2b5cb1;
-                --shadow: #afc6ff;
-                display: flex}
-
-            h1{font-family: 'Inconsolata'; font-size: 3.5rem; padding-bottom: 16px}
-
-            .info{padding: 24px; width: 400px;
-                border-right: solid var(--color) 1px}
-            .info details{padding-bottom: 8px}
-            .summary{padding: 0 24px; margin: 48px; font-size: 2rem}
-
-            .summary a{text-decoration: none; color: var(--text)}
-            .summary a:hover{color: var(--back)}
-            .info{width:400px}
-
-            #entry{color: #410001;} 
-            #entry a{color:#c0000c} 
-            #entry a:hover{background-color: #c0000c; text-decoration-color: #c0000c; color: #fff8f7}
-
-            /*- Details about each page -*/
-            li a:hover::after{margin-left: 8px; font-size: 1.5rem;}
-
-            a.about:hover{background-color: #1b1b1b; color: #fcfcfc}
-            .about:hover::after{content: "(me and what i like to do)"}
-
-            a.bookmarks:hover{background-color: #110563; color: #c3c0ff}
-            .bookmarks:hover::after{content: "(cool websites i've collected)"}
-
-            a.blender:hover{background-color: #090909; color: #f9f9f9}
-            .blender:hover::after{content: "(3d renders made in blender)"}
-
-            a.words:hover{background-color: #934b00; color: #ffdcc4}
-            .words:hover::after{content: "(stuff i've written)"}
-
-            a.buttons:hover{background-color: #0b458e; color: #b8cadf}
-            .buttons:hover::after{content: "(other folks' sites)"}
-
-            a.log:hover{background-color: #ffa900; color: #0c0905}
-            .log:hover::after{content: "(what's changed)"}
-
-            /*- For mobile screens -*/
-
-            @media only screen and (max-width: 700px) {
-                body{display:block}
-                .info{border-right: none; 
-                    width: auto;
-                    border-bottom: solid var(--color) 1px; padding-bottom: 16px}
-                h1{font-size: min(3.5rem, 15vw)}
-                .summary{margin-left: 48px; margin-top: 24px; padding: 0; width: auto}
-                }
+        <title>nowhere</title><style>
+            pre{font-family: 'Inconsolata', monospace; font-size:1.5rem;
+            margin:1.5rem; padding: 1.5rem; border: solid #f0f0f0 3px; line-height: 1.35rem; width:fit-content; height: fit-content}
+            body{background-color: #040404;
+                color: #f0f0f0; margin: 0}
         </style></head>
 
-    <body>
-    <div class="info">
-        <h1>nowhere in<br>particular</h1>
-        <p>Oh hey! Welcome to this place, where i put stuff about me,
-        what i like and what i do! Or... at least i try to. This place is
-        basically in an eternal state of 'UNDER CONSTRUCTION'. But hey it happens.
-        If you wanna check some stuff out, cool! If you don't, that's cool too!
-        ...sorry i don't have much to say, it isn't really my thing to say much.</p><br>
-        <details><summary>places i am on</summary>
-            <ul>
-                <li><b>discord: </b>cvni81#4837</li>
-                <li><b>music i like: </b><a href="https://bandcamp.com/cvni1981">bandcamp</a>, <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92">spotify</a></li>
-                <li><b>email: </b>cvni1981@gmail.com</li>
-            </ul></details>
-            <details><summary>current status</summary>
-                <div id="entry" style="margin: 8px 20px 16px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details>
-    
-        
-    </div>
-    <ul class="summary">
-        <li><a href="about"     class="about"    >about</a></li>
-        <li><a href="bookmarks" class="bookmarks">bookmarks</a></li>
-        <li><a href="blender"   class="blender"  >blender</a></li>
-        <li><a href="words"     class="words"    >words</a></li>
-        <li><a href="buttons"   class="buttons"  >buttons</a></li>
-        <li><a href="sitelog"   class="log"      >sitelog</a></li>
-    </ul>
-
-</body>
+    <body><pre>
+under construction
+<span style="color: hsl(0, 0%, 100%, calc(17 / 18))">nder construction</span> <span style="color: hsl(0, 0%, 100%, calc(1 / 18))">u
+<span style="color: hsl(0, 0%, 100%, calc(16 / 18))">der construction</span> <span style="color: hsl(0, 0%, 100%, calc(2 / 18))">un
+<span style="color: hsl(0, 0%, 100%, calc(15 / 18))">er construction</span> <span style="color: hsl(0, 0%, 100%, calc(3 / 18))">und
+<span style="color: hsl(0, 0%, 100%, calc(14 / 18))">r construction</span> <span style="color: hsl(0, 0%, 100%, calc(4 / 18))">unde
+<span style="color: hsl(0, 0%, 100%, calc(13 / 18))"> construction</span> <span style="color: hsl(0, 0%, 100%, calc(5 / 18))">under
+<span style="color: hsl(0, 0%, 100%, calc(12 / 18))">construction</span> <span style="color: hsl(0, 0%, 100%, calc(6 / 18))">under 
+<span style="color: hsl(0, 0%, 100%, calc(11 / 18))">onstruction</span> <span style="color: hsl(0, 0%, 100%, calc(7 / 18))">under c
+<span style="color: hsl(0, 0%, 100%, calc(10 / 18))">nstruction</span> <span style="color: hsl(0, 0%, 100%, calc(8 / 18))">under co
+<span style="color: hsl(0, 0%, 100%, calc(9 / 18))">struction</span> <span style="color: hsl(0, 0%, 100%, calc(9 / 18))">under con
+<span style="color: hsl(0, 0%, 100%, calc(8 / 18))">truction</span> <span style="color: hsl(0, 0%, 100%, calc(10 / 18))">under cons
+<span style="color: hsl(0, 0%, 100%, calc(7 / 18))">ruction</span> <span style="color: hsl(0, 0%, 100%, calc(11 / 18))">under const
+<span style="color: hsl(0, 0%, 100%, calc(6 / 18))">uction</span> <span style="color: hsl(0, 0%, 100%, calc(12 / 18))">under constr
+<span style="color: hsl(0, 0%, 100%, calc(5 / 18))">ction</span> <span style="color: hsl(0, 0%, 100%, calc(13 / 18))">under constru
+<span style="color: hsl(0, 0%, 100%, calc(4 / 18))">tion</span> <span style="color: hsl(0, 0%, 100%, calc(14 / 18))">under construc
+<span style="color: hsl(0, 0%, 100%, calc(3 / 18))">ion</span> <span style="color: hsl(0, 0%, 100%, calc(15 / 18))">under construct
+<span style="color: hsl(0, 0%, 100%, calc(2 / 18))">on</span> <span style="color: hsl(0, 0%, 100%, calc(16 / 18))">under constructi
+<span style="color: hsl(0, 0%, 100%, calc(1 / 18))">n</span> <span style="color: hsl(0, 0%, 100%, calc(17 / 18))">under constructio
+ under construction
+</pre></body>
 </html>
