--- a/mante.html
+++ b/mante.html
@@ -11,12 +11,12 @@
         <title>mante</title><style>
         body{--back: #080808;
         --text: #f0f0f0;
-        --color: #f6abb6;
+        --color: #5dcbfc;
         --shadow: #404040;
         --details: #f0f0f010;}
-        a{text-decoration-color: #5dcbfc;}
-        a:hover{background-color: #5dcbfc; text-decoration-color: #5dcbfc;}
-        .name{color: var(--color)}
+        ::selection{background-color: #f6abb6}
+        a::selection{background-color: var(--color)}
+        .name{color: #f6abb6}
         .name::selection{background-color: #5dcbfc}
         .tab:hover{background-color: #14052b; color: #23f3ad}
         </style></head>
