changed 404 page to be more descriptive

--- a/404.html
+++ b/404.html
@@ -3,18 +3,19 @@
     <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&display=swap&text=underconstruction" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&display=swap&text=underconstructionhpag'xwy." rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>nowhere</title><style>
             pre{font-family: 'Inconsolata', monospace; font-size:1.5rem;
-            margin:1.5rem; padding: 1.5rem; border: solid #f0f0f0 3px; line-height: 1.35rem; width:fit-content; height: fit-content}
+            margin: 3px; padding: 0 1.5rem ; line-height: 1.35rem; width:fit-content; height: fit-content}
+            .board{border: solid #f0f0f0 3px; margin:1.5rem 1.5rem 13px; padding: 1.5rem}
             body{background-color: #040404;
-                color: #f0f0f0; margin: 0}
+                color: #f0f0f0; margin: 0;}
             a{color: #f0f0f0; text-decoration: underline 2px #4040ff; transition: all .5s cubic-bezier(.08,.82,.17,1)}
             a:hover{color: #4040ff}
         </style></head>
 
-    <body><pre>
+    <body><pre class="board">
 under construction
 <span style="color: hsl(0, 0%, 100%, calc(17 / 18))">nder construction</span> <span style="color: hsl(0, 0%, 100%, calc(1 / 18))">u
 <span style="color: hsl(0, 0%, 100%, calc(16 / 18))">der construction</span> <span style="color: hsl(0, 0%, 100%, calc(2 / 18))">un
@@ -34,5 +35,9 @@ under construction
 <span style="color: hsl(0, 0%, 100%, calc(2 / 18))">on</span> <span style="color: hsl(0, 0%, 100%, calc(16 / 18))">under constructi
 <span style="color: hsl(0, 0%, 100%, calc(1 / 18))">n</span> <span style="color: hsl(0, 0%, 100%, calc(17 / 18))">under constructio
  <a href="/website/">under construction</a>
-</pre></body>
+</pre>
+<pre>this page doesn't exist
+...how did you get here
+</pre>
+</body>
 </html>
