--- a/mante.html
+++ b/mante.html
@@ -29,7 +29,7 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 52 changes</li>
+                    <li><b>kulupu ko:</b> 53 changes</li>
                     <li><b>The Planet Mercury:</b> 39 changes</li>
                     <li><b>the motan:</b> 38 changes</li>
                     <li><b>kala Asi:</b> 7 changes</li>
@@ -38,6 +38,7 @@
                 tan mute ante
         </details>
         <ul>
+            <li>august 7:<b> gays </b><span class="name">kulupu ko</span></li><br>
             <li>august 4:<b> ma pona pi toki pona (beta) </b><span class="name">kulupu ko</span></li><br>
             <li>august 4:<b> fanter </b><span class="name">the motan</span></li><br>
             <li>august 4:<b> mabte </b><span class="name">The Planet Mercury</span></li><br>
