--- a/mante.html
+++ b/mante.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@450;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <title>mante</title><style>
         body{--back: #080808;
         --text: #f0f0f0;
@@ -30,12 +31,13 @@
                     <li><b>kulupu ko:</b> 53 changes</li>
                     <li><b>The Planet Mercury:</b> 39 changes</li>
                     <li><b>the motan:</b> 38 changes</li>
-                    <li><b>kala Asi:</b> 7 changes</li>
+                    <li><b>kala Asi:</b> 8 changes</li>
                     <li><b>jan Seli:</b> 4 changes</li>
                 </ul><br>
                 tan mute ante
         </details>
         <ul>
+            <li>august 9:<b> manure guys </b><span class="name">kala Asi</span></li><br>
             <li>august 7:<b> gays </b><span class="name">kulupu ko</span></li><br>
             <li>august 4:<b> ma pona pi toki pona (beta) </b><span class="name">kulupu ko</span></li><br>
             <li>august 4:<b> fanter </b><span class="name">the motan</span></li><br>
