added other misc things to test

--- a/misc/index.html
+++ b/misc/index.html
@@ -4,8 +4,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
         <link href="misc.css" rel="stylesheet" type="text/css" media="all">
         <title>> misc</title><style>
             .journal, .notes, .folder, .exit{padding-left: 20px}
@@ -25,7 +26,7 @@
     </p><br>
     <div class="journal">> <a href="journal">open the notebook</a></div>
     <div class="folder">> <a href="folder">open the folder</a></div>
-    <div class="notes">> <a href="notes">look at the wall</a></div>
+    <div class="notes">> <a href="wall">look at the wall</a></div>
     <div class="exit">> <a href="/website/">walk out the door</a></div>
     <div class="indicator"></div>
     </div></body>
