fixed style links in misc

--- a/misc/wall.html
+++ b/misc/wall.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="folder/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
         <link href="misc.css" rel="stylesheet" type="text/css" media="all">
         <title>> wall</title><style>
 
