--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -6,8 +6,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet" type="text/css" media="all">
-        <link href="misc.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/misc/misc.css" rel="stylesheet" type="text/css" media="all">
         <title>> folder</title><style>
 
             details:hover, details[open], details[open] > summary{border-color: var(--color)}
