--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -67,7 +67,7 @@
         <ul>
             <li><a href="other/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit. (Also i keep having to change this page every time i change the design of the site.) (and also because i now understand that <b>difference isn't as important as equality</b>.)</li>
             <li><a href="other/blips">blips</a>*: short poems in pages that, though i like the vibe of them, they don't display properly on mobile.</li>
-            <li><a href="other/zine/0">nameless zine</a>: refer to <a href="journal#zine">journal entry</a>.</li>
+            <li><a href="other/zine/0">nameless zine</a>: refer to <a href="journal#zine">journal entry</a>. Also the first time i used Work Sans!</li>
             <li><a href="other/nothing">unprobable blog</a>: the sole post in a blog i knew i wouldn't really keep posting on. so here it is.</li>
             <li><a href="other/hi">hi</a>: hi</li>
             <li><a href="other/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.</li>
