--- a/misc/folder/other/difference.html
+++ b/misc/folder/other/difference.html
@@ -7,7 +7,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
-        <title>difference</title></head>
+        <title>difference</title><style>
+            body{--back: #080808;
+                --text: #f0f0f0;
+                --color: #f0f0f0;
+                --shadow: #404040;}
+        </style></head>
     <body><div class="main"><h1>about difference</h1></div>
     <div class="top"><a href="/website/misc/folder">back to folder</a></div>
     <div class="main">
