--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -49,15 +49,15 @@
         </ul>
         <p>since everything else was handdrawn (except for the text), the buttons were also supposed to be handdrawn, but the contrast sucked (especially the etc button) so i scrapped it for pixel-y gifs, and changed the header accordingly.</p>
         <ul>
-            <li><a href="doodles/people_button.jpg">people</a></li>
-            <li><a href="doodles/ruler_and_compass_button.jpg">ruler and compass</a></li>
-            <li><a href="doodles/etc_button.jpg">etc (the culprit)</a></li>
+            <img src="doodles/people_button.jpg" alt="people">
+            <img src="doodles/ruler_and_compass_button.jpg" alt="ruler and compass">
+            <img src="doodles/etc_button.jpg" alt="etc (the culprit)">
         </ul>
         <p>Also, during the 5th redesign, i tried to remake the buttons to be much smaller and easier to see, but i couldn't make it work right so i kept the big buttons.</p>
         <ul>
-            <li><a href="doodles/people.gif">people</a></li>
-            <li><a href="doodles/rac.gif">ruler and compass</a> (recreation, i can't recover the original)</li>
-            <li><a href="doodles/etc.gif">etc</a></li>
+            <img src="doodles/people.gif" alt="people">
+            <img src="doodles/rac.gif" alt="ruler and compass (recreation, i can't recover the original)">
+            <img src="doodles/etc.gif" alt="etc">
         </ul>
 
     </details>
