--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -79,7 +79,7 @@
 
         <details>
             <summary>buttons</summary>
-            With (almost) every site redesign came the need for a new button to match.<br>
+            <p>With (almost) every site redesign came the need for a new button to match.</p><br>
             <div class="image"><img src="images/nowhere1.gif">
                 <p>The first version with the dark theme and old font, Inter (a Helvetica clone).</p></div>
             <div class="image"><img src="images/nowhere2.gif">
@@ -94,7 +94,7 @@
 
         <details>
             <summary>dingus</summary>
-            The images i used in my <a href="/website/about">about me</a> and status.cafe pages.<br>
+            <p>The images i used in my <a href="/website/about">about me</a> and status.cafe pages.</p><br>
             <div class="image"><img style="background-color: var(--back)" src="images/dingus.png">
                 <p>The first version, done digitally, probably GIMP.</p></div>
             <div class="image"><img style="background-color: var(--text); border-radius: 100%;" src="images/dingus2.png">
