--- a/mante.html
+++ b/mante.html
@@ -29,14 +29,16 @@
                 (name changer) leaderboard:
                 <ul>
                     <li><b>kulupu ko:</b> 53 changes</li>
-                    <li><b>The Planet Mercury:</b> 39 changes</li>
-                    <li><b>the motan:</b> 38 changes</li>
+                    <li><b>The Planet Mercury:</b> 40 changes</li>
+                    <li><b>the motan:</b> 39 changes</li>
                     <li><b>kala Asi:</b> 8 changes</li>
                     <li><b>jan Seli:</b> 4 changes</li>
                 </ul><br>
                 tan mute ante
         </details>
         <ul>
+            <li>august 9:<b> straights /tf2 </b><span class="name">the motan</span></li><br>
+            <li>august 9:<b> straights <span style="cursor:help" title="three fourths joke">/tfj</span> </b><span class="name">The Planet Mercury</span></li><br>
             <li>august 9:<b> manure guys </b><span class="name">kala Asi</span></li><br>
             <li>august 7:<b> gays </b><span class="name">kulupu ko</span></li><br>
             <li>august 4:<b> ma pona pi toki pona (beta) </b><span class="name">kulupu ko</span></li><br>
