--- a/sitelog.html
+++ b/sitelog.html
@@ -34,6 +34,10 @@
             And old web aesthetic (?) with cool fonts. Idk if i succeeded h</details>
         <br>
         <div id="entry">
+            <h2>13/8/2023 10:19<div class="after"></div></h2>
+            <p>Added bookmarks and the misc and sitelog pages to the index.
+            </p> 
+        </div><div id="entry">
             <h2>11/8/2023 12:39<div class="after"></div></h2>
             <p>Finished (somewhat) transitioning the misc pages to yet another redesign (but not put them in the index yet)! As well as this sitelog.
             </p> 
