fixed index text to fit

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     <body>
     <div class="info">
         <h1>nowhere in particular</h1>
-        <p>Oh hey! Welcome to this place, where... well there's nothing here right now, 
-            we're in the middle of a(nother) redesign, we just have contacts right now,
-            in case you wanna talk to me or what we listen to! I'll just... put this blinky here
+        <p>Oh hey! Welcome to this place, where... well there's not much here right now, 
+            we're in the middle of a(nother) redesign, putting things back in their places.
+            If you wanna talk to us, our contacts are below! I'll just... put this blinky here
         </p><br>
         <img src="underconstruction.gif" alt="under construction"><br><br>
         <details><summary>places i am in</summary>
