--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             .summary a:hover::after{margin-left: 8px; font-size: 1.5rem}
 
-            .bookmarks:hover{background-color: #110563; color: #ffb135; border-color: #ffb135;}
+            .bookmarks:hover{background-color: #0d0542; color: #ffb135; border-color: #ffb135;}
             .bookmarks:hover::after{content: "(cool websites i've collected)"}
 
             .misc:hover{background-color: #15c40510; color: #15c405; border-color: #15c405;}
