--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             .bookmarks:hover{background-color: #0d0542; color: #ffb135; border-color: #ffb135;}
             .bookmarks:hover::after{content: "(cool websites i've collected)"}
 
-            .misc:hover{background-color: #15c40510; color: #15c405; border-color: #15c405;}
+            .misc:hover{background-color: #15c40510; color: #f0f0f0; border-color: #15c405;}
             .misc:hover::after{content: "(ellaneous)"}
 
             .sitelog:hover{background-color: #ffa90010; color: #ffa900; border-color: #ffa900;}
