--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -87,7 +87,9 @@
             <div class="image"><img src="images/nowhere3.gif">
                 <p>An unrounded version with my new favorite font, Work Sans.</p></div>
             <div class="image"><img src="images/nowhere4.gif">
-                <p>A version corresponding to index 7 with a blue tint and kinda-burned in effect.</p></div>
+                <p>A version corresponding to index 7 with a blue tint and kinda-burned in effect, also with the
+                    new header font, Inconsolata.
+                </p></div>
             <div class="image"><img style="max-width: 200px" src="images/nowhere5.gif">
                 <p>A 200x40 button that took a while to make but looks pleasing!</p></div>
         </details>
