added buttons page

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             .bookmarks:hover{background-color: #0d0542; color: #ffb135; border-color: #ffb135;}
             .bookmarks:hover::after{content: "(cool websites i've collected)"}
 
+            .buttons:hover{background-color: #b8cadf; color: #001a40; border-color: #0b458e;}
+            .buttons:hover::after{content: "(other folks' sites)"}
+
             .misc:hover{background-color: #15c40510; color: #f0f0f0; border-color: #15c405;}
             .misc:hover::after{content: "(ellaneous)"}
 
@@ -89,6 +92,7 @@
     <div class="summary">
 
         <a href="bookmarks" class="bookmarks">bookmarks</a><br>
+        <a href="buttons" class="buttons">buttons</a><br>
         <a href="misc" class="misc">misc</a><br>
         <a href="sitelog" class="sitelog">sitelog</a><br>
 
