--- a/sitelog.html
+++ b/sitelog.html
@@ -34,6 +34,10 @@
             And old web aesthetic (?) with cool fonts. Idk if i succeeded h</details>
         <br>
         <div id="entry">
+            <h2>14/8/2023 21:01<div class="after"></div></h2>
+            <p>Added back buttons page, now with a johnvertisement again! I think i'm gonna work on favicons and buttons now.
+            </p> 
+        </div><div id="entry">
             <h2>13/8/2023 10:19<div class="after"></div></h2>
             <p>Added bookmarks and the misc and sitelog pages to the index.
             </p> 
