made h1 size larger

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -18,7 +18,7 @@
         h2{display:flex; align-items: center;}
         a{text-decoration-color: var(--shadow);}
 
-        .buttons{display:flex; gap: 8px; flex-wrap: wrap}
+        .buttons{display:flex; gap: 8px; flex-wrap: wrap; padding-top: 8px}
         .button{height: 31px}
 
         .button img{outline: solid var(--back) 0px ;transition: outline .2s linear}
