--- a/index.html
+++ b/index.html
@@ -46,19 +46,18 @@
             .summary a:hover::after{margin-left: 8px; font-size: 1.5rem}
 
             .bookmarks:hover{background-color: #0d0542; color: #ffb135; border-color: #ffb135;}
-            .bookmarks:hover::after{content: "(cool websites i've collected)"}
-
             .buttons:hover{background-color: #b8cadf; color: #001a40; border-color: #0b458e;}
-            .buttons:hover::after{content: "(other folks' sites)"}
-
             .misc:hover{background-color: #15c40510; color: #f0f0f0; border-color: #15c405;}
-            .misc:hover::after{content: "(ellaneous)"}
-
             .sitelog:hover{background-color: #ffa90010; color: #ffa900; border-color: #ffa900;}
-            .sitelog:hover::after{content: "(what's changed)"}
 
             /*- For mobile screens -*/
 
+            @media only screen and(min-width: 700px) {
+               .bookmarks:hover::after{content: "(cool websites i've collected)"} 
+               .buttons:hover::after{content: "(other folks' sites)"}
+               .misc:hover::after{content: "(ellaneous)"}
+               .sitelog:hover::after{content: "(what's changed)"}
+            }
             @media only screen and (max-width: 700px) {
                 body{display:block}
                 .info{border-right: none; 
