--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             .info details{padding-bottom: 8px; margin-bottom: 8px}
             .summary{padding: 0 24px; margin: 48px; font-size: 2rem}
 
-            .summary a{padding: 8px 16px; border: solid 2px var(--shadow); margin: 8px 0 8px; display: inline-block;
+            .summary a{padding: 8px 16px; border: solid 2px var(--shadow); margin: 8px 4px; display: inline-block;
             text-decoration: none}
             .info{width:400px}
 
@@ -52,7 +52,7 @@
 
             /*- For mobile screens -*/
 
-            @media only screen and(min-width: 700px) {
+            @media only screen and (min-width: 700px) {
                .bookmarks:hover::after{content: "(cool websites i've collected)"} 
                .buttons:hover::after{content: "(other folks' sites)"}
                .misc:hover::after{content: "(ellaneous)"}
@@ -64,7 +64,8 @@
                     width: auto;
                     border-bottom: solid var(--color) 2px; margin-bottom: 12px}
                 h1{font-size: min(3.5rem, 15vw); margin-bottom: 0; border-bottom: none}
-                .summary{margin: 12px 24px 0; padding: 0; width: auto;}
+                .summary{margin: 12px 24px 48px; padding: 0; width: auto;}
+                .h{display: none}
                 }
 
         </style></head>
@@ -91,9 +92,9 @@
     <div class="summary">
 
         <a href="bookmarks" class="bookmarks">bookmarks</a><br>
-        <a href="buttons" class="buttons">buttons</a><br>
-        <a href="misc" class="misc">misc</a><br>
-        <a href="sitelog" class="sitelog">sitelog</a><br>
+        <a href="buttons" class="buttons">buttons</a><br class="h">
+        <a href="misc" class="misc">misc</a><br class="h">
+        <a href="sitelog" class="sitelog">sitelog</a>
 
     </div>
 
