--- a/blender/index.html
+++ b/blender/index.html
@@ -20,7 +20,8 @@
         You can see how many images each page has next to the link, so if your internet isn't too good, maybe these won't be the fastest loading times...</p>
 
         <ul>
-            <li><h3><a href="icossymetry/">icossymetry</a> (40)</h3></li>
+            <li><h3><a href="icossymetry">icossymetry</a> (40)</h3></li>
+            <li><h3><a href="buttons">buttons</a> (7)</h3></li>
         </ul>
 
         <img src="shadow.png" alt="a handdrawn sphere casting a shadow" style="margin: 0; max-width: 100%; width: auto"> </div></body>
