--- a/blender/buttons/index.html
+++ b/blender/buttons/index.html
@@ -15,25 +15,14 @@
         <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="/website/blender">go back</a></div>
         <div class="main">
             <p>I normally make still renders, but today i felt like making buttons, so i made these as a challenge, i guess.</p>
-            <div class="image"><img src="walking.gif">
-                <p>One with cubes walking;</p></div>
+                <p>One with cubes walking:</p><br><img src="walking.gif">
                 <br>
-            <div class="image"><img src="shadow.gif">
-                <p></p></div>
+                <p>Two having fun with shadows and things:</p><br><img src="shadow.gif"><img src="what.gif">
                 <br>
-            <div class="image"><img src="what.gif">
-                <p>Two having fun with shadows and things;</p></div>
-                <br>
-            <div class="image"><img src="colorring1.gif">
-                <p></p></div>
-                <br>
-            <div class="image"><img src="colorring2.gif">
-                <p>And two others with a spinning color ring.</p></div>
+                <p>And two others with a spinning color ring:</p><br><img src="colorring1.gif"><img src="colorring2.gif">
                 <br>    
-            <div class="image"><img src="waves.gif">
-                <p>Another one exploring shadows, but because of the speed and low resolution, it didn't turn out very good.</p></div>
-                <br>    
-            <p>But at least I got some nice still renders.</p>
+                <p>Another one exploring shadows, but because of the speed and low resolution, it didn't turn out very good.</p><br><img src="waves.gif">
+            <p>But at least I got some nice still renders.</p><br><br>
             <div class="image"><img src="sticks1.png">
                 <p></p></div>
                 <br>    
@@ -47,8 +36,7 @@
                 <p>And another based on the cubes casting shadows on each other.</p></div>
                 <br>    
             <p>This was my first time doing buttons, so it's pretty basic, but i wanna do it again some other time.</p>
-            <div class="image"><img src="carpediem.gif">
-                <p>Edit: i did!</p></div>
+                <p>Edit: i did!</p><br><img src="carpediem.gif">
         <br>
     </div></body>
 </html>
