--- a/blender/buttons/index.html
+++ b/blender/buttons/index.html
@@ -14,15 +14,15 @@
     <body><div class="main"><h1>buttons!</h1></div>
         <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="/website/blender">go back</a></div>
         <div class="main">
-            <p>I normally make still renders, but today i felt like making buttons, so i made these as a challenge, i guess.</p>
-                <p>One with cubes walking:</p><br><img src="walking.gif">
-                <br>
-                <p>Two having fun with shadows and things:</p><br><img src="shadow.gif"><img src="what.gif">
-                <br>
-                <p>And two others with a spinning color ring:</p><br><img src="colorring1.gif"><img src="colorring2.gif">
-                <br>    
-                <p>Another one exploring shadows, but because of the speed and low resolution, it didn't turn out very good.</p><br><img src="waves.gif">
-            <p>But at least I got some nice still renders.</p><br><br>
+            <p>I normally make still renders, but today i felt like making buttons, so i made these as a challenge, i guess.</p><br>
+                <p>One with cubes walking:</p><img src="walking.gif">
+                <br><br>
+                <p>Two having fun with shadows and things:</p><img src="shadow.gif"><img src="what.gif">
+                <br><br>
+                <p>And two others with a spinning color ring:</p><img src="colorring1.gif"><img src="colorring2.gif">
+                <br><br> 
+                <p>Another one exploring shadows, but because of the speed and low resolution, it didn't turn out very good.</p><img src="waves.gif">
+            <p>But at least I got some nice still renders.</p><br>
             <div class="image"><img src="sticks1.png">
                 <p></p></div>
                 <br>    
@@ -35,8 +35,8 @@
             <div class="image"><img src="grid.png">
                 <p>And another based on the cubes casting shadows on each other.</p></div>
                 <br>    
-            <p>This was my first time doing buttons, so it's pretty basic, but i wanna do it again some other time.</p>
-                <p>Edit: i did!</p><br><img src="carpediem.gif">
+            <p>This was my first time doing buttons, so it's pretty basic, but i wanna do it again some other time.</p><br>
+                <p>Edit: i did!</p><img src="carpediem.gif">
         <br>
     </div></body>
 </html>
